# rtypebs

./: .gitignore  CMakeLists.txt  main.cpp  server.py  test_rtype_server  tmp  tmp.txt  tmp.xml
src/: A.hpp  EventManager.hpp  NetworkEvent.hpp  NetworkMessage.hpp  PrefabManager.hpp  assets_manager.hpp  control_system.hpp  controllable.hpp  draw_system.hpp  drawable.hpp  entity_t.hpp  indexed_zipper.hpp  indexed_zipper_iterator.hpp  logging_system.hpp  position.hpp  position_system.hpp  prefab.hpp  registry.hpp  sparse_array.hpp  velocity.hpp  zipper.hpp  zipper_iterator.hpp
src/Component/: animation.hpp  clickable.hpp  collider.hpp  controllable.hpp  damage.hpp  displayable_hurtbox.hpp  drawable.hpp  health.hpp  hurtbox.hpp  network_client.hpp  network_handler.hpp  path.hpp  playerShooter.hpp  position.hpp  shooter.hpp  spawner.hpp  vector.hpp  velocity.hpp
src/Component/Tag/: enemy.hpp  player.hpp  projectile.hpp
src/System/: animation_system.hpp  collide_system.hpp  control_system.hpp  damage_system.hpp  draw_system.hpp  health_system.hpp  hurtbox_display_system.hpp  logging_system.hpp  mouse_system.hpp  network_system.hpp  path_system.hpp  player_shoot_system.hpp  position_system.hpp  projectile_system.hpp  shoot_system.hpp  spawner_system.hpp
tests/: main.cpp  test_A.cpp  test_sparse_array.cpp
